adding /api/test/finalize and 2 new disp sensors
